--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,9 @@
     "content_scripts": [
         {
             "matches": [
-                "<all_urls>"
+                "*://*/*.pdf*",
+                "file://*/*.pdf*",
+                "https://localpdf.online/*"
             ],
             "js": [
                 "src/content/index.js"
