Fix extension file fetch and injection reliability

--- a/manifest.json
+++ b/manifest.json
@@ -8,6 +8,9 @@
         "storage",
         "contextMenus"
     ],
+    "host_permissions": [
+        "<all_urls>"
+    ],
     "action": {
         "default_popup": "index.html"
     },
